--- a/mediaServer/package.json
+++ b/mediaServer/package.json
@@ -1,17 +1,18 @@
 {
-    "scripts": {
-        "dev": "nodemon npm run dev"
-    },
-    "dependencies": {
-        "net": "^1.0.2"
-    },
-    "devDependencies": {
-        "eslint": "^9.14.0",
-        "eslint-config-prettier": "^9.1.0",
-        "eslint-plugin-prettier": "^5.2.1",
-        "nodemon": "^3.1.7",
-        "prettier": "^3.3.3",
-        "ts-node": "^10.9.2",
-        "typescript": "^5.6.3"
-    }
+  "scripts": {
+    "dev": "nodemon"
+  },
+  "dependencies": {
+    "net": "^1.0.2"
+  },
+  "devDependencies": {
+    "eslint": "^9.14.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "nodemon": "^3.1.7",
+    "prettier": "^3.3.3",
+    "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.6.3"
+  }
 }
