--- a/client/package.json
+++ b/client/package.json
@@ -21,8 +21,14 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.16",
     "eslint-plugin-prettier": "^5.2.1",
+    "msw": "^2.6.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
+  },
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
   }
 }
