setting: svg 컴포넌트화
- 치지직에서 필요한 svg 추출
- JSX 컴포넌트화 및 Props 설정

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -18,6 +18,8 @@
       }
     ],
     "paths": {
+      "@libs/*": ["./src/app/libs/*"],
+      "@components/*": ["./src/app/components/*"],
       "@server/*": ["./src/app/server/*"],
       "@/*": ["./src/*"]
     }
