--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -18,6 +18,8 @@
       }
     ],
     "paths": {
+      "@hooks/*": ["./src/app/hooks/*"],
+      "@providers/*": ["./src/app/providers/*"],
       "@libs/*": ["./src/app/libs/*"],
       "@components/*": ["./src/app/components/*"],
       "@server/*": ["./src/app/server/*"],
