홈 페이지 인기 라이브 목록 - 홈 페이지 메인에 노출되는 인기 라이브 목록 및 관련 컴포넌트 - 메인 레이아웃

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -18,6 +18,7 @@
       }
     ],
     "paths": {
+      "@mocks/*": ["./src/app/__mocks__/*"],
       "@hooks/*": ["./src/app/hooks/*"],
       "@providers/*": ["./src/app/providers/*"],
       "@libs/*": ["./src/app/libs/*"],
