--- a/mediaServer/package.json
+++ b/mediaServer/package.json
@@ -4,17 +4,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "fluent-ffmpeg": "^2.1.3",
     "net": "^1.0.2",
     "node-amfutils": "^0.0.1"
   },
   "devDependencies": {
     "@types/jest": "^29.5.14",
-    "eslint": "^9.14.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.2.1",
     "jest": "^29.7.0",
     "nodemon": "^3.1.7",
-    "prettier": "^3.3.3",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
