--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "clsx": "^2.1.1",
+    "hls.js": "^1.5.17",
     "next": "14.2.16",
     "react": "^18",
     "react-dom": "^18"
