--- a/mediaServer/package.json
+++ b/mediaServer/package.json
@@ -4,8 +4,11 @@
     "test": "jest"
   },
   "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "@ffprobe-installer/ffprobe": "^2.1.2",
     "aws-sdk": "^2.1692.0",
     "dotenv": "^16.4.5",
+    "fluent-ffmpeg": "^2.1.3",
     "net": "^1.0.2",
     "node-amfutils": "^0.0.1"
   },
