feat: mockData 수정
- mocha 사진 업로드
- assets 폴더 생성

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -18,6 +18,7 @@
       }
     ],
     "paths": {
+      "@assets/*": ["./src/app/assets/*"],
       "@test/*": ["./src/app/__test__/*"],
       "@mocks/*": ["./src/app/__mocks__/*"],
       "@hooks/*": ["./src/app/hooks/*"],
