--- a/mediaServer/tsconfig.json
+++ b/mediaServer/tsconfig.json
@@ -9,7 +9,8 @@
     "baseUrl": "./",
     "paths": {
       "@rtmp/*": ["core/rtmp/*"],
-      "@media/*": ["core/media/*"]
+      "@media/*": ["core/media/*"],
+      "@/*": ["*"]
     },
     "noImplicitAny": false
   }
