--- a/mediaServer/package.json
+++ b/mediaServer/package.json
@@ -10,7 +10,9 @@
     "dotenv": "^16.4.5",
     "fluent-ffmpeg": "^2.1.3",
     "net": "^1.0.2",
-    "node-amfutils": "^0.0.1"
+    "node-amfutils": "^0.0.1",
+    "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
     "@types/jest": "^29.5.14",
