--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -16,6 +16,7 @@
     "@typescript-eslint/no-use-before-define": "off",
     "@typescript-eslint/no-empty-interface": "off",
     "@typescript-eslint/no-parameter-properties": "off",
-    "@typescript-eslint/no-empty-function": "off"
+    "@typescript-eslint/no-empty-function": "off",
+    "@typescript-eslint/no-unused-vars": "warn"
   }
 }
