refactor: 클라이언트 디렉토리 구조 개선 및 레이아웃 분리 - src 계층을 활용하는 쪽으로 디렉토리 구조를 개선했다. - 메인 도메인과 스튜디오 도메인의 레이아웃을 구분하기 위해 도메인에 라우트 그루핑 적용

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -17,15 +17,16 @@
         "name": "next"
       }
     ],
+    "baseUrl": ".",
     "paths": {
-      "@assets/*": ["./src/app/assets/*"],
-      "@test/*": ["./src/app/__test__/*"],
-      "@mocks/*": ["./src/app/__mocks__/*"],
-      "@hooks/*": ["./src/app/hooks/*"],
+      "@assets/*": ["./src/assets/*"],
+      "@test/*": ["src/__test__/*"],
+      "@mocks/*": ["src/__mocks__/*"],
+      "@hooks/*": ["src/hooks/*"],
       "@providers/*": ["./src/app/providers/*"],
-      "@libs/*": ["./src/app/libs/*"],
+      "@libs/*": ["./src/libs/*"],
       "@components/*": ["./src/app/components/*"],
-      "@server/*": ["./src/app/server/*"],
+      "@server/*": ["src/server/*"],
       "@app/*": ["./src/app/*"],
       "@/*": ["./src/*"]
     }
