--- a/aplicationServer/tsconfig.json
+++ b/aplicationServer/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "module": "commonjs",
+    "esModuleInterop": true,
     "declaration": true,
     "removeComments": true,
     "emitDecoratorMetadata": true,
@@ -10,6 +11,12 @@
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./",
+    "paths": {
+      "@src/*": ["src/*"],
+      "@auth/*": ["src/database/*"],
+      "@database/*": ["src/database/*"],
+      "@member/*": ["src/member/*"]
+    },
     "incremental": true,
     "skipLibCheck": true,
     "strictNullChecks": false,
