refactor: databaseProvider 배열에 대한 리뷰 적용
- DatabaseModule에 적용되는 providers가 databaseProvider 뿐이라 배열 형태가 아닌 단일 Provider로 개선하였다.

--- a/applicationServer/tsconfig.json
+++ b/applicationServer/tsconfig.json
@@ -13,7 +13,7 @@
     "baseUrl": "./",
     "paths": {
       "@src/*": ["src/*"],
-      "@auth/*": ["src/database/*"],
+      "@auth/*": ["src/auth/*"],
       "@database/*": ["src/database/*"],
       "@member/*": ["src/member/*"],
       "@live/*": ["src/live/*"]
