chore: path alias 등록 및 package.json jest 설정 변경
Live 모듈 생성에 따른 Live 모듈 Path alias를 tsconfig.json에 등록하였고, package.json의 jest: rootDir을 src -> ""로 바꾸어 test 디렉토리도 테스트 범위에 포함되도록 변경하였습니다., jest용 path alias 등록도 포함했습니다. jest path alias의 자세한 내용은 노션 문서 트러블 슈팅 참고 부탁드립니다.

--- a/applicationServer/tsconfig.json
+++ b/applicationServer/tsconfig.json
@@ -15,7 +15,8 @@
       "@src/*": ["src/*"],
       "@auth/*": ["src/database/*"],
       "@database/*": ["src/database/*"],
-      "@member/*": ["src/member/*"]
+      "@member/*": ["src/member/*"],
+      "@live/*": ["src/live/*"]
     },
     "incremental": true,
     "skipLibCheck": true,
