--- a/applicationServer/package.json
+++ b/applicationServer/package.json
@@ -14,10 +14,12 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/axios": "^3.1.2",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
+    "axios": "^1.7.7",
     "dotenv": "^16.4.5",
     "mysql2": "^3.11.4",
     "reflect-metadata": "^0.2.0",
