--- a/applicationServer/package.json
+++ b/applicationServer/package.json
@@ -18,8 +18,9 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/mapped-types": "*",
-    "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/jwt": "^10.2.0",
     "axios": "^1.7.7",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.5",
     "mysql2": "^3.11.4",
     "reflect-metadata": "^0.2.0",
@@ -30,6 +31,7 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/cookie-parser": "^1.4.7",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
