chore: Auth 주요 로직을 core 폴더 내부로 이동
- Auth 주요 로직을 담은 파일이 점점 많아져서 core 폴더 내부로 이동시켰다.

--- a/applicationServer/tsconfig.json
+++ b/applicationServer/tsconfig.json
@@ -13,7 +13,10 @@
     "baseUrl": "./",
     "paths": {
       "@src/*": ["src/*"],
-      "@auth/*": ["src/auth/*"],
+      "@auth/*": ["src/auth/core/*"],
+      "@cookie/*": ["src/auth/cookie/*"],
+      "@github/*": ["src/auth/github/*"],
+      "@authUtil/*": ["src/auth/util/*"],
       "@database/*": ["src/database/*"],
       "@member/*": ["src/member/*"],
       "@live/*": ["src/live/*"]
