chore: Test path alias 추가
Jest Service 로직 테스트를 위한 Path alias를 추가하였습니다.

--- a/applicationServer/package.json
+++ b/applicationServer/package.json
@@ -58,7 +58,11 @@
     "coverageDirectory": "../coverage",
     "testEnvironment": "node",
     "moduleNameMapper": {
-      "^@live/(.*)$": "<rootDir>/src/live/$1"
+      "^@live/(.*)$": "<rootDir>/src/live/$1",
+      "^@src/(.*)$": "<rootDir>/src/$1",
+      "^@database/(.*)$": "<rootDir>/src/database/$1",
+      "^@member/(.*)$": "<rootDir>/src/member/$1",
+      "^@auth/(.*)$": "<rootDir>/src/auth/$1"
     }
   }
 }
