--- a/applicationServer/package.json
+++ b/applicationServer/package.json
@@ -66,7 +66,10 @@
       "^@src/(.*)$": "<rootDir>/src/$1",
       "^@database/(.*)$": "<rootDir>/src/database/$1",
       "^@member/(.*)$": "<rootDir>/src/member/$1",
-      "^@auth/(.*)$": "<rootDir>/src/auth/$1"
+      "^@auth/(.*)$": "<rootDir>/src/auth/core/$1",
+      "^@github/(.*)$": "<rootDir>/src/auth/github/$1",
+      "^@cookie/(.*)$": "<rootDir>/src/auth/cookie/$1",
+      "^@authUtil/(.*)$": "<rootDir>/src/auth/util/$1"
     }
   }
 }
