--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "clsx": "^2.1.1",
     "hls.js": "^1.5.17",
+    "js-cookie": "^3.0.5",
     "next": "14.2.16",
     "react": "^18",
     "react-dom": "^18"
@@ -20,6 +21,7 @@
   "devDependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.0.1",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
