--- a/applicationServer/package.json
+++ b/applicationServer/package.json
@@ -17,8 +17,9 @@
     "@nestjs/axios": "^3.1.2",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
-    "@nestjs/mapped-types": "*",
     "@nestjs/jwt": "^10.2.0",
+    "@nestjs/mapped-types": "*",
+    "aws-sdk": "^2.1692.0",
     "axios": "^1.7.7",
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.5",
