--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,7 +10,7 @@
   },
   "rules": {
     "prettier/prettier": "warn",
-
+    "@typescript-eslint/no-unused-vars": "warn",
     "@typescript-eslint/interface-name-prefix": "off",
     "@typescript-eslint/explicit-function-return-type": "off",
     "@typescript-eslint/explicit-module-boundary-types": "off",
