--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,8 @@
     "js-cookie": "^3.0.5",
     "next": "14.2.16",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@testing-library/dom": "^10.4.0",
