chore: follow path alias 추가
- follow에 해당하는 path alias를 추가하였다.

--- a/applicationServer/tsconfig.json
+++ b/applicationServer/tsconfig.json
@@ -19,7 +19,8 @@
       "@authUtil/*": ["src/auth/util/*"],
       "@database/*": ["src/database/*"],
       "@member/*": ["src/member/*"],
-      "@live/*": ["src/live/*"]
+      "@live/*": ["src/live/*"],
+      "@follow/*": ["src/follow/*"]
     },
     "incremental": true,
     "skipLibCheck": true,
