chore: naver path alias 추가
naver 로그인 구현에 따라 package.json과 tsconfig.json에 naver path
alias를 추가하였습니다.

--- a/applicationServer/package.json
+++ b/applicationServer/package.json
@@ -69,6 +69,7 @@
       "^@member/(.*)$": "<rootDir>/src/member/$1",
       "^@auth/(.*)$": "<rootDir>/src/auth/core/$1",
       "^@github/(.*)$": "<rootDir>/src/auth/github/$1",
+      "^@naver/(.*)$": "<rootDir>/src/auth/naver/$1",
       "^@cookie/(.*)$": "<rootDir>/src/auth/cookie/$1",
       "^@authUtil/(.*)$": "<rootDir>/src/auth/util/$1"
     }
