feat: 구글 로그인 모듈 세팅
- 구글 로그인 구현을 위해 path alias를 설정하였다.
- 구글 로그인 구현을 위해 Controller, Service를 생성하여 Module에 등록하였다.

--- a/applicationServer/tsconfig.json
+++ b/applicationServer/tsconfig.json
@@ -21,7 +21,8 @@
       "@database/*": ["src/database/*"],
       "@member/*": ["src/member/*"],
       "@live/*": ["src/live/*"],
-      "@follow/*": ["src/follow/*"]
+      "@follow/*": ["src/follow/*"],
+      "@google/*": ["src/auth/google/*"]
     },
     "incremental": true,
     "skipLibCheck": true,
