--- a/applicationServer/package.json
+++ b/applicationServer/package.json
@@ -71,7 +71,8 @@
       "^@github/(.*)$": "<rootDir>/src/auth/github/$1",
       "^@naver/(.*)$": "<rootDir>/src/auth/naver/$1",
       "^@cookie/(.*)$": "<rootDir>/src/auth/cookie/$1",
-      "^@authUtil/(.*)$": "<rootDir>/src/auth/util/$1"
+      "^@authUtil/(.*)$": "<rootDir>/src/auth/util/$1",
+      "^@follow/(.*)$": "<rootDir>/src/follow/$1"
     }
   }
 }
