--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "typecheck": "tsc --noEmit -p tsconfig.json"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.61.4",
     "clsx": "^2.1.1",
     "hls.js": "^1.5.17",
     "js-cookie": "^3.0.5",
