--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "next": "14.2.16",
     "react": "^18",
     "react-dom": "^18",
+    "sharp": "^0.33.5",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
