refactor: 배포 workflow 수정
수기 실행에서 스크립트 파일 이용으로 변경하였습니다.

Co-authored-by: 최호빈 <hobinchoi0116@gmail.com>

--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -19,9 +19,7 @@ jobs:
           chmod 600 deploy_key
           ssh -i deploy_key "${SERVER_USER}"@"${SERVER_HOST}" << EOF
             cd /root/web25-funch
-            git switch main
-            git pull origin main
-            pm2 reload ecosystem.config.js
+            sh deploy.sh
           EOF
 
   media-deploy:
@@ -37,8 +35,5 @@ jobs:
           chmod 600 deploy_key
           ssh -i deploy_key "${SERVER_USER}"@"${SERVER_HOST}" << EOF
             cd /service/web25-funch
-            git switch main
-            git pull origin main
-            cd mediaServer
-            pm2 reload ecosystem.config.js
+            sh deploy.sh
           EOF
