chore: application server search path alias 추가
Application Server의 search api를 추가함에 따라 path alias를
추가했습니다.

--- a/applicationServer/package.json
+++ b/applicationServer/package.json
@@ -72,7 +72,8 @@
       "^@naver/(.*)$": "<rootDir>/src/auth/naver/$1",
       "^@cookie/(.*)$": "<rootDir>/src/auth/cookie/$1",
       "^@authUtil/(.*)$": "<rootDir>/src/auth/util/$1",
-      "^@follow/(.*)$": "<rootDir>/src/follow/$1"
+      "^@follow/(.*)$": "<rootDir>/src/follow/$1",
+      "^@search/(.*)$": "<rootDir>/src/search/$1"
     }
   }
 }
