--- a/applicationServer/package.json
+++ b/applicationServer/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.7.7",
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.5",
+    "ioredis": "^5.4.1",
     "mysql2": "^3.11.4",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
