refactor: Actions Deployment workflow 수정
Github Actions의 Deployment workflow의 funch server deploy 스크립트에
client를 build한 이후 반영하도록 변경하였습니다.

--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -21,6 +21,9 @@ jobs:
             cd /root/web25-funch
             git switch main
             git pull origin main
+            cd client
+            npm run build
+            cd ..
             sh deploy.sh
           EOF
 
