refactor: Actions Deployment workflow 수정
Github Actions Deployment workflow에서 배포를 수행할 때 하위 디렉토리에 npm install을 수행해 의존성을 갱신하도록 변경하였습니다.

--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -21,9 +21,14 @@ jobs:
             cd /root/web25-funch
             git switch main
             git pull origin main
-            cd client
+            cd /root/web25-funch/client
+            npm install
             npm run build
-            cd ..
+            cd /root/web25-funch/chatServer
+            npm install
+            cd /root/web25-funch/applicationServer
+            npm install
+            cd /root/web25-funch
             sh deploy.sh
           EOF
 
@@ -43,5 +48,6 @@ jobs:
             git switch main
             git pull origin main
             cd mediaServer
+            npm install
             sh deploy.sh
           EOF
