chore: 채팅 서버 패키지 추가
채팅 서버에 dotenv 의존성을 추가했습니다.

--- a/chatServer/package.json
+++ b/chatServer/package.json
@@ -3,6 +3,7 @@
     "start": "npx ts-node main.ts"
   },
   "dependencies": {
+    "dotenv": "^16.4.7",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1"
   },
